# genesis

./: .gitignore  .gitmodules  CMakeLists.txt  Genesis.sln  README.md  build_windows.bat
Genesis/: Genesis.h  Genesis.vcxproj  Genesis.vcxproj.filters
Genesis/core/: application.cpp  application.h  core.h  entry_point.h  input.cpp  input.h  layer.cpp  layer.h  layer_stack.cpp  layer_stack.h  log.cpp  log.h  window.h  window_factory.cpp  window_factory.h
Genesis/events/: event.h  key_event.h  mouse_event.h  window_event.h
Genesis/imgui/: imgui_layer.cpp  imgui_layer.h
Sandbox/: Sandbox.vcxproj  Sandbox.vcxproj.filters  Source.cpp
assets/language/: english.txt
assets/shaders/: flat_color.vert  model.frag  model.vert  texture_2d.vert
cmake/: CMakeLists.txt
docs/: Doxyfile  footer.html
docs/html/: annotated.html  application_8cpp.html  application_8h.html  application_8h_source.html  class_genesis_1_1_application-members.html  class_genesis_1_1_application.html  class_genesis_1_1_event-members.html  class_genesis_1_1_event.html  class_genesis_1_1_event_dispatcher-members.html  class_genesis_1_1_event_dispatcher.html  class_genesis_1_1_g_l_f_w_input-members.html  class_genesis_1_1_g_l_f_w_input.html  class_genesis_1_1_g_l_f_w_window-members.html  class_genesis_1_1_g_l_f_w_window.html  class_genesis_1_1_im_gui_layer-members.html  class_genesis_1_1_im_gui_layer.html  class_genesis_1_1_input-members.html  class_genesis_1_1_input.html  class_genesis_1_1_key_event-members.html  class_genesis_1_1_key_event.html  class_genesis_1_1_key_pressed_event-members.html  class_genesis_1_1_key_pressed_event.html  class_genesis_1_1_key_released_event-members.html  class_genesis_1_1_key_released_event.html  class_genesis_1_1_key_typed_event-members.html  class_genesis_1_1_key_typed_event.html  class_genesis_1_1_layer-members.html  class_genesis_1_1_layer.html  class_genesis_1_1_layer_stack-members.html  class_genesis_1_1_layer_stack.html  class_genesis_1_1_log-members.html  class_genesis_1_1_log.html  class_genesis_1_1_mouse_button_event-members.html  class_genesis_1_1_mouse_button_event.html  class_genesis_1_1_mouse_button_pressed_event-members.html  class_genesis_1_1_mouse_button_pressed_event.html  class_genesis_1_1_mouse_button_released_event-members.html  class_genesis_1_1_mouse_button_released_event.html  (+83 more)
editor/: CMakeLists.txt  source.cc
editor/imgui_layer/: file_dialog.cc  grid_controller.cc  grid_controller.h  imgui_gizmos.cc  imgui_gizmos.h  imgui_layer.cc  imgui_layer.h  inspector.h
editor/sandbox/: playground.cc  playground.h  sandbox_2d.h  sandbox_3d.cc  sandbox_3d.h
genesis/: CMakeLists.txt  Genesis.h  genesis.h
genesis/core/: application.cc  application.cpp  application.h  core.h  entry_point.h  input.cc  input.h  math_struct.cpp  math_struct.h  time_step.cpp  time_step.h  timer.cc  timer.h  window.cc  window.cpp  window.h
genesis/core/audio/: audio.cc  audio.h
genesis/core/component/: camera.cc  camera.cpp  camera.h  component.cc  component.h  game_object.cpp  game_object.h  light.cc  light.cpp  light.h  mesh_filter.cpp  mesh_filter.h  scene.cc  scene.h  transform.cpp  transform.h
genesis/core/events/: event.h  key_event.h  mouse_event.h  window_event.h
genesis/core/imgui/: grid_controller.cpp  grid_controller.h  imgui_layer.cpp  imgui_layer.h
genesis/core/input/: input.cc  input.h
genesis/core/layer/: layer.cc  layer.h  layer_stack.cc  layer_stack.h
genesis/core/log/: log.cc  log.cpp  log.h
genesis/core/profile/: profile_timer.cpp  profile_timer.h
genesis/core/profiler/: profiler.cc  profiler.h
genesis/core/renderer/: buffer.cc  buffer.cpp  buffer.h  buffer_layout.cpp  buffer_layout.h  character.h  font.cc  font.h  frame_buffer.cc  frame_buffer.h  graphic_context.cc  graphic_context.h  grid.cc  grid.cpp  grid.h  mesh.cc  mesh.cpp  mesh.h  model.cc  model.cpp  model.h  render_buffer.cc  render_buffer.h  render_command.cc  render_command.cpp  render_command.h  renderer.cpp  renderer.h  renderer_2d.cc  renderer_2d.cpp  renderer_2d.h  renderer_3d.cc  renderer_3d.cpp  renderer_3d.h  renderer_api.cc  renderer_api.h  sampler.cc  sampler.h  shader.cc  shader.cpp  (+11 more)
genesis/core/renderer/camera/: camera.cc  camera.h  camera_3d_interface.h  camera_controller.cc  camera_controller.h  orthographic_camera.cpp  orthographic_camera.h  orthographic_camera_controller.cpp  orthographic_camera_controller.h  perspective_camera.cc  perspective_camera.cpp  perspective_camera.h  perspective_camera_controller.cc  perspective_camera_controller.cpp  perspective_camera_controller.h
genesis/core/renderer/vertex_format/: vertex_pnt.cc  vertex_pnt.cpp  vertex_pnt.h
genesis/core/script/: script.h
genesis/platform/: glfw_context.cc  glfw_context.h
genesis/platform/input/: glfw_input.cc  glfw_input.cpp  glfw_input.h
genesis/platform/render_api/opengl/: opengl_buffer.cc  opengl_buffer.cpp  opengl_buffer.h  opengl_context.cc  opengl_context.cpp  opengl_context.h  opengl_frame_buffer.cc  opengl_frame_buffer.h  opengl_render_buffer.cc  opengl_render_buffer.h  opengl_render_command.cc  opengl_render_command.cpp  opengl_render_command.h  opengl_sampler.cc  opengl_sampler.h  opengl_shader.cc  opengl_shader.cpp  opengl_shader.h  opengl_texture.cc  opengl_texture.cpp  opengl_texture.h  opengl_vertex_array.cc  opengl_vertex_array.cpp  opengl_vertex_array.h
genesis/platform/window/: glfw_window.cc  glfw_window.cpp  glfw_window.h
genesis/resource/: opengl_texture_compressor.cpp  opengl_texture_compressor.h
sandbox/: CMakeLists.txt  source.cc  source.cpp
sandbox/assets/shaders/: flat_color.frag  test.frag  texture_2d.frag
sandbox/imgui_layer/: file_dialog.cc  file_dialog.h  global_layer_controller.cc  global_layer_controller.h  global_layer_controller_layer.cc  global_layer_controller_layer.h  grid_controller_layer.cc  grid_controller_layer.cpp  grid_controller_layer.h  imgui_gizmos.cc  imgui_gizmos.h  imgui_layer.cc  imgui_layer.cpp  imgui_layer.h  inspector.cc  sandbox_2d.cc  sandbox_2d.cpp  sandbox_2d.h  sandbox_3d.cc  sandbox_3d.cpp  sandbox_3d.h
(+71 files in other folders)
